// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package vaccel;

import "error.proto";

enum BlobType {
    FILE = 0;
    BUFFER = 1;
    MAPPED = 2;
}

message Blob {
	BlobType type_ = 1;
	string name = 2;
	bytes data = 3;
	uint32 size = 4;
}

enum ResourceType {
	LIB = 0;
	DATA = 1;
	MODEL = 2;
}

message RegisterResourceRequest {
	repeated string paths = 1;
	repeated Blob blobs = 2;
	ResourceType resource_type = 3;
	int64 resource_id = 4;
	int64 session_id = 5;
}

message RegisterResourceResponse {
	int64 resource_id = 1;
}

message UnregisterResourceRequest {
	int64 resource_id = 1;
	int64 session_id = 2;
}

message SyncResourceRequest {
	int64 resource_id = 1;
}

message SyncResourceResponse {
	repeated Blob blobs = 1;
}
